--- a/config-duo/docker-compose.yaml
+++ b/config-duo/docker-compose.yaml
@@ -14,6 +14,6 @@ services:
       protocol: tcp
     volumes:
     - type: bind
-      source: ./nginx/nginx.conf
+      source: ./nginx.conf
       target: /etc/nginx/nginx.conf
       
